--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             </div>
         </nav>
 
-
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="js/scripts.js"></script>
     </body>
 
     <footer>
