--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="eng">
     <head>
         <meta charset="utf-8" />
-        <title>Lucas Pittam Portfolio | Full Stack Developer (Javascript, React, SQL)</title>
+        <title>Lucas Pittam Portfolio | Full Stack Developer (Javascript, React, Node)</title>
         <meta name="Lucas is a Full Stack Developer with a diverse skillset like programming, problem solving, and design. Love learing about new tech and business ideas. ">
 
         <link href="syle.css" rel="stylesheet" />
@@ -37,7 +37,7 @@
                         (Toronto, Ontario, Canada) · (416) 997-6677 ·
                         <a href="mailto:pittamlucas@gmail.com">pittamlucas@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">Fully committed to life-long learning. I am a full stack developer with a deep passion for solving problems. Capable with the unique skillset of using creativity and logic to solve comprehensive puzzels through code. When not drinking coffee and spending long hours at a compiuter, I like to stay fit with Mixed Martial arts like Brazillian Jiu Jitsu</p>
+                    <p class="lead mb-5">Fully committed to life-long learning. I am a full stack developer with a deep passion for solving problems. Capable with the unique skillset of using creativity and logic to solve comprehensive puzzels through code. When not drinking coffee and spending long hours at a compiuter, I like to stay fit with Mixed Martial arts like Brazillian Jiu Jitsu and Boxing.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
