--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                        Toronto, Ontario, Canada · (416) 997-6677 ·
                         <a href="mailto:pittamlucas@gmail.com">pittamlucas@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">Fully committed to life-long learning. I am a full stack developer with a deep passion for solving problems. Capable and with the unique skillset of using creativity and logic to solve comprehensive puzzels through code. When not drinking coffee and spending long hours at a computer, I like to stay fit with Mixed Martial arts like Brazillian Jiu Jitsu and Boxing.</p>
+                    <p class="lead mb-5">Full-stack developer with a passion for solving problems and a commitment to lifelong learning. Skills in Html, Javascript, React and with the unique skill set of using creativity and logic to solve comprehensive puzzles through code. I am Motivated to develop responsive websites and apps. Positioned to provide a unique perspective on how users interact with websites and software platforms by leveraging educational background with a Certificate of Web Development from University of Toronto and work experience in Brand Development and Sales. When not drinking coffee and spending long hours at a computer, I like to stay fit with Mixed Martial arts like Brazilian Jiu Jitsu and Boxing.
+                    </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/lucas-pittam-3209bb22b/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/lucaspittam"><i class="fab fa-github"></i></a>
