new projects page in develop, started page structure

--- a/index.html
+++ b/index.html
@@ -53,28 +53,48 @@
             </section>
             <hr class="m-0" />
             <!-- Projects-->
-            <section class="resume-section" id="projects">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Projects</h2>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">To Do list</h3>
-                            <div class="subheading mb-3">''</div>
-                            <p></p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">February 2022 - Present</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Snake Game</h3>
-                            <div class="subheading mb-3">''</div>
-                            <p></p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">February 2022 - Present</span></div>
-                    </div>
-                    
+            <section id="work" class="work">
+                <div class="section-title">
+                  <h2 class="mb-5">
+                    Work
+                  </h2>
                 </div>
-            </section>
+                <div class= "grid">
+                 <div class="projects-grid">
+   
+                     <a href="https://lucaspittam.dev/run-buddy/" target="_blank" class="project run-buddy">
+                         <div class="projectl">
+                             <h3>Run Buddy</h3>
+                             <p>HTML/CSS</p>
+                         </div>
+                     </a>
+                     <a href="#" target="_blank" class="project two">
+                         <div class="projectl">
+                             <h3>Project 2</h3>
+                             <p>lorem epsom</p>
+                         </div>
+                     </a>
+                     <a href="#" target="_blank" class="project three">
+                         <div class="projectl">
+                             <h3>Project 3</h3>
+                             <p>lorem</p>
+                         </div>
+                     </a>
+                     <a href="#" target="_blank" class="project four">
+                         <div class="projectl">
+                             <h3>Project 4</h3>
+                             <p>Lorem</p>
+                         </div>
+                     </a>
+                     <a href="#" target="_blank"  class="project five">
+                         <div class="projectl">
+                             <h3>Project 5</h3>
+                             <p>Lorem epsum</p>
+                         </div>
+                     </a>
+                   </div>
+                 </div>
+               </section>
             <hr class="m-0" />
             <!-- Education-->
             <section class="resume-section" id="education">
