--- a/index.html
+++ b/index.html
@@ -53,11 +53,9 @@
             </section>
             <hr class="m-0" />
             <!-- Projects-->
-            <section id="work" class="work">
+            <section id="work-section" class="work">
                 <div class="section-title">
-                  <h2 class="mb-5">
-                    Work
-                  </h2>
+                  <h2 class="mb-5">Work</h2>
                 </div>
                 <div class= "grid">
                  <div class="projects-grid">
