--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
                 </div>
                 <div class= "grid">
                  <div class="projects-grid">
-   
                      <a href="https://lucaspittam.dev/run-buddy/" target="_blank" class="project run-buddy">
                          <div class="projectl">
                              <h3>Run Buddy</h3>
@@ -68,14 +67,14 @@
                      </a>
                      <a href="#" target="_blank" class="project two">
                          <div class="projectl">
-                             <h3>Project 2</h3>
-                             <p>lorem epsom</p>
+                             <h3>Residential Matchmaker</h3>
+                             <p>Javascript, Node.js</p>
                          </div>
                      </a>
-                     <a href="#" target="_blank" class="project three">
+                     <a href="https://project1team7.github.io/Trekking-App" target="_blank" class="project three">
                          <div class="projectl">
-                             <h3>Project 3</h3>
-                             <p>lorem</p>
+                             <h3>Trekking App </h3>
+                             <p>Html,Css,Javascript</p>
                          </div>
                      </a>
                    </div>
