--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </section>
             <hr class="m-0" />
             <!-- Projects-->
-            <section id="work-section" class="work">
+            <section class="work" id="work-section" >
                 <div class="section-title">
                   <h2 class="mb-5">Work</h2>
                 </div>
